--- a/nextjs-blog-typescript/package.json
+++ b/nextjs-blog-typescript/package.json
@@ -13,5 +13,10 @@
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.39",
+    "@types/react": "^18.0.10",
+    "typescript": "^4.7.2"
   }
 }
