うーーーーｎ　わからん！w

--- a/nextjs-blog-typescript/tsconfig.json
+++ b/nextjs-blog-typescript/tsconfig.json
@@ -6,9 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
+    "preserveSymlinks": true,
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "incremental": true,
@@ -16,7 +16,8 @@
     "module": "esnext",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "strict": false
   },
   "include": [
     "next-env.d.ts",
